# deployment-scripts

./: CHANGELOG.md  README.md  changelog.txt  changes.md  changes.txt  generate_git_id.py  setup.cfg  threads_bug.al
aggregations/: README.md  aggregation.py  aggregation_functions.py  aggregations.py  blockchain.py  blockchain_cmds.py  policy_generator.py  set_aggregations.py  set_aggregations_old.py  support.py
archive/: aggregation.al  blockchain.md  config_policy.al  config_threshold.al  connect_networking.al  network_configs.al  openbao_demo.al  sample_debug.al
authentication/: basic_authentication.al  ca_key_authentication.al  enable_authentication.al
connectors/: southbound_industrial_policies.al  syslog.al
customers/: nov_telegraf.al  winnio_kafka.al
data-generator/: blobs_car_videos.al  blobs_factory_images.al  blobs_people_videos.al  data_generator_ping_percentagecup_sensor.al  drone_telemetry.al  mqtt_enterprise_c_sub.al  mqtt_enterprise_c_tff.al  oil_rig_data.al  opcua_enterprise_a.al  power_plant.al  rand_data.al  vessel_aggregation_demo.al  vessel_data.al  wind_turbine_data.al
demo-scripts/: opcua_tags.al
gRPC/: README.md
monitoring/: monitoring_policy.al  node_monitoring.al
moshe-clean/: bug.txt  clean_node.bat  clean_node.sh
node-deployment/: blockchain.md  connect_blockchain.al  local_script.al  main.al  main_win.al  set_params.al
proveit-scripts/: bottle_factory_aggregation.al  bottle_factory_mqtt.al  manufacturing_historian_aggregation.al  manufacturing_historian_mqtt.al
sample-scripts/: aggregation.al  basic_kafka_client.al  (+9 more)
(+119 files in other folders)
