[metadata]
name = deployment-scripts
version = 1.4.2604 (pre-develop - 2ba4ae [2026-04-30 00:26:20])
author = AnyLog Co.
contact = info@anylog.co
description = Deployment Scripts for Anylog nodes
license = Copyright AnyLog Co.
site = https://anylog.co
docs = https://github.com/AnyLog-co/documentation
source = https://github.com/AnyLog-co
